fix: Adjust table layout to prevent overflow beyond parent container

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -25,8 +25,13 @@
   @apply my-0 px-6 py-4 bg-transparent text-sm leading-relaxed;
 }
 
+.prose .table-block {
+  @apply bg-zinc-100 dark:bg-zinc-800 relative rounded-lg mt-10 mb-6;
+  overflow: auto;
+}
+
 .prose table {
-  @apply w-auto;
+  @apply w-auto mx-4;
 }
 
 .prose img {
